--- a/Assignments/Ragul Kumar R/assignment-1/ragulresume.html
+++ b/Assignments/Ragul Kumar R/assignment-1/ragulresume.html
@@ -1,11 +1,12 @@
 <html lang="en">
+  
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="gurujicss.css">
+  <link rel="stylesheet" href="ragulcss.css">
 </head>
 
 <body>
