--- a/Assignments/Ragul Kumar R/assignment2/user_registration[1].html
+++ b/Assignments/Ragul Kumar R/assignment2/user_registration[1].html
@@ -15,9 +15,9 @@
 <input type="Mobile No" value="Enter number" size=""><br><br>
 <label>City:</label>
 <select id="city" name="city">
-     <option value="cova">cova</option>
-     <option value="Thiruchi">Thiruchi</option>
-     <option value="Thuthukudi">Thuthukudi</option>     
+     <option value="Goa">Goa</option>
+     <option value="coimbatore">coimbatore</option>
+     <option value="oddanchatram">oddanchatram</option>     
      </select><br><br>
 <label>State:</label><br>
 <input type="radio" value="Tamilnadu">Tamilnadu<br>
